// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Carousel 1 photo 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel 1 photo with onEnd 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel 2 photos 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel all photos 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel all photos with onChange and onEnd 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel custom config 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -121.9px;
  height: 247.8px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 0.5s;
  -webkit-transition: transform 0.5s;
  transition: transform 0.5s;
  will-change: transform;
}

.c0 ul li {
  margin: 2px;
  min-width: 200px;
  width: 200px;
  height: 200px;
  -webkit-transition: all 0.5s;
  transition: all 0.5s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 23.900000000000006px;
}

.c1 border {
  radius: 100%;
  width: 4px;
  color: green;
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel extended style 1`] = `
.c4 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c1 {
  position: relative;
}

.c1 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c1 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c1 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c1 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c2 {
  border: 4px solid rgba(255,255,255,0.56);
}

.c0 {
  background: lavender;
}

.c0 .image {
  background-size: 50%;
  background-repeat: repeat;
}

.c0 .itemLabel {
  color: red;
}

<div
  className="c0 c1"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c2 c3"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c4"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel no scale 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -328px;
  height: 368px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2s;
  -webkit-transition: transform 2s;
  transition: transform 2s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2s;
  transition: all 2s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 20px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Carousel partial custom config 1`] = `
.c3 {
  font-family: Lato,sans-serif;
  font-size: 88px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  box-sizing: border-box;
  border-radius: 16px;
  object-fit: cover;
}

.c0 {
  position: relative;
}

.c0 ul {
  position: relative;
  left: 50%;
  margin-left: -399.83200000000005px;
  height: 439.83200000000005px;
  list-style: none;
  padding: 0;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-transform: translateX( 0px );
  -ms-transform: translateX( 0px );
  transform: translateX( 0px );
  -webkit-transition: -webkit-transform 2.5s;
  -webkit-transition: transform 2.5s;
  transition: transform 2.5s;
  will-change: transform;
}

.c0 ul li {
  margin: 20px;
  min-width: 656px;
  width: 656px;
  height: 328px;
  -webkit-transition: all 2.5s;
  transition: all 2.5s;
  will-change: transform;
}

.c0 ul li .image {
  box-shadow: 0 4px 40px 0 rgba(0,0,0,0.32);
}

.c0 ul li.active {
  -webkit-transform: scale(1.219);
  -ms-transform: scale(1.219);
  transform: scale(1.219);
  -webkit-transform-origin: bottom;
  -ms-transform-origin: bottom;
  transform-origin: bottom;
  margin: 0 91.83200000000005px;
}

.c1 {
  border: 4px solid rgba(255,255,255,0.56);
}

<div
  className="c0"
>
  <ul>
    <li
      className="active"
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=1080"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Organic Pepper
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=824"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=889"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Grapefruit
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=674"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=292"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=517"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=627"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=75"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Tomato
      </div>
    </li>
    <li
      className=""
    >
      <img
        alt=""
        className="image c1 c2"
        height="100%"
        size={48}
        src="https://picsum.photos/640/?image=766"
        width="100%"
      />
      <div
        className="itemLabel c3"
        fontWeight="title"
        size={88}
        type="#2f313a"
      >
        Romaine Lettuce
      </div>
    </li>
  </ul>
</div>
`;
